--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongodb": "^4.1.0",
-    "mongoose": "^5.13.7"
+    "mongoose": "^5.13.7",
+    "telegraf": "^4.4.1"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
