--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^4.1.0",
     "mongoose": "^5.13.7",
-    "telegraf": "^4.4.1"
+    "telegraf": "^4.4.1",
+    "telegraf-inline-menu": "^6.3.0"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
