--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "moment": "^2.29.1",
     "mongodb": "^4.1.0",
     "mongoose": "^5.13.7",
+    "node-schedule": "^2.0.0",
     "telegraf": "^4.4.1",
     "telegraf-inline-menu": "^6.3.0"
   },
