--- a/example.env
+++ b/example.env
@@ -1,3 +1,4 @@
 port=3000
+notificationTimeInMinutes=5
 mongodb=mongodb://localhost/telegramBot
 botToken=1839143750:AAFbMSE2PCyItaI3iXpoQRTIvnasEc6ZrdA
