--- a/example.env
+++ b/example.env
@@ -2,3 +2,6 @@ port=3000
 notificationTimeInMinutes=5
 mongodb=mongodb://localhost/telegramBot
 botToken=1839143750:AAFbMSE2PCyItaI3iXpoQRTIvnasEc6ZrdA
+token=Telegram.Bot.Admin.Token/PASSWORD**
+userName=Bot.Admin.1
+userPassword=Bot.Password.2
