--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "telegraf-inline-menu": "^6.3.0"
   },
   "devDependencies": {
+    "btoa": "^1.2.1",
     "dotenv": "^10.0.0",
     "nodemon": "^2.0.12"
   }
