--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "btoa": "^1.2.1",
     "dotenv": "^10.0.0",
+    "multer": "^1.4.3",
     "nodemon": "^2.0.12"
   }
 }
