--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "btoa": "^1.2.1",
     "dotenv": "^10.0.0",
+    "file-type": "^16.5.3",
     "multer": "^1.4.3",
     "nodemon": "^2.0.12"
   }
