--- a/example.env
+++ b/example.env
@@ -5,3 +5,4 @@ botToken=1839143750:AAFbMSE2PCyItaI3iXpoQRTIvnasEc6ZrdA
 token=Telegram.Bot.Admin.Token/PASSWORD**
 loginUserName=Bot.Admin.1
 loginUserPassword=Bot.Password.2
+buttonCountInRow=2
