--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "devDependencies": {
     "btoa": "^1.2.1",
     "dotenv": "^10.0.0",
+    "ejs": "^3.1.6",
     "file-type": "^16.5.3",
+    "html-pdf": "^3.0.1",
     "multer": "^1.4.3",
     "nodemon": "^2.0.12"
   }
