--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start:dev": "nodemon index.js"
   },
   "dependencies": {
+    "archiver": "^5.3.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
