--- a/example.env
+++ b/example.env
@@ -1,6 +1,6 @@
 port=4000
 notificationTimeInMinutes=5
-mongodb=mongodb://localhost/telegramBot
+mongodb=mongodb+srv://tigran:manutd2020@cluster0.e6ns0do.mongodb.net/?retryWrites=true&w=majority
 botToken=1839143750:AAFbMSE2PCyItaI3iXpoQRTIvnasEc6ZrdA
 token=Telegram.Bot.Admin.Token/PASSWORD**
 loginUserName=Bot.Admin.1
