--- a/example.env
+++ b/example.env
@@ -1,7 +1,7 @@
 port=4000
 notificationTimeInMinutes=5
-mongodb=mongodb+srv://tigran:manutd2020@cluster0.e6ns0do.mongodb.net/?retryWrites=true&w=majority
-botToken=1839143750:AAFbMSE2PCyItaI3iXpoQRTIvnasEc6ZrdA
+mongodb=mongodb://localhost:27017
+botToken=5952535609:AAEppRczjjhBhgzMQkLnCd2IGST45MO5pno
 token=Telegram.Bot.Admin.Token/PASSWORD**
 loginUserName=Bot.Admin.1
 loginUserPassword=Bot.Password.2
