--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongodb": "^4.1.0",
     "mongoose": "^5.13.7",
     "node-schedule": "^2.0.0",
+    "swagger-ui-express": "^4.6.1",
     "telegraf": "^4.4.1",
     "telegraf-inline-menu": "^6.3.0"
   },
