--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,8 @@
 port=4000
 notificationTimeInMinutes=5
 mongodb=mongodb+srv://akhanamiryan:P45MBB6dJxEIr3iB@allincluisve.zscgv6l.mongodb.net/?retryWrites=true&w=majority
-botToken=1839143750:AAFbMSE2PCyItaI3iXpoQRTIvnasEc6ZrdA
+#botToken=1839143750:AAFbMSE2PCyItaI3iXpoQRTIvnasEc6ZrdA
+botToken=1875703600:AAE_FsDjcSzGRnSp_Gr7UsUMs5WXXk6m4Po
 token=Telegram.Bot.Admin.Token/PASSWORD**
 loginUserName=Bot.Admin.1
 loginUserPassword=Bot.Password.2
