--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "mongodb": "^4.1.0",
     "mongoose": "^5.13.7",
     "node-schedule": "^2.0.0",
+    "socket.io": "^4.6.1",
     "swagger-ui-express": "^4.6.1",
-    "telegraf": "^4.4.1",
+    "telegraf": "^4.12.2",
     "telegraf-inline-menu": "^6.3.0"
   },
   "devDependencies": {
