--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
     "start:dev": "nodemon index.js"
   },
   "dependencies": {
+    "@telegraf/session": "^2.0.0-beta.6",
     "archiver": "^5.3.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "moment": "^2.29.1",
-    "mongodb": "^4.1.0",
+    "mongodb": "^4.16.0",
     "mongoose": "^5.13.7",
     "node-schedule": "^2.0.0",
     "socket.io": "^4.6.1",
     "swagger-ui-express": "^4.6.1",
     "telegraf": "^4.12.2",
-    "telegraf-inline-menu": "^6.3.0"
+    "telegraf-inline-menu": "^6.3.0",
+    "telegraf-session-mongodb": "^2.0.2"
   },
   "devDependencies": {
     "btoa": "^1.2.1",
