--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   "dependencies": {
     "@telegraf/session": "^2.0.0-beta.6",
     "archiver": "^5.3.0",
+    "aws-sdk": "^2.1385.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "moment": "^2.29.1",
     "mongodb": "^4.16.0",
     "mongoose": "^5.13.7",
+    "multer-s3": "^2.0.1",
     "node-schedule": "^2.0.0",
     "socket.io": "^4.6.1",
     "swagger-ui-express": "^4.6.1",
