--- a/package.json
+++ b/package.json
@@ -6,30 +6,31 @@
     "start:dev": "nodemon index.js"
   },
   "dependencies": {
-    "@telegraf/session": "^2.0.0-beta.6",
-    "archiver": "^5.3.0",
-    "aws-sdk": "^2.1385.0",
-    "body-parser": "^1.19.0",
+    "@telegraf/session": "^2.0.0-beta.7",
+    "archiver": "^7.0.1",
+    "aws-sdk": "^2.1628.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "moment": "^2.29.1",
-    "mongodb": "^4.16.0",
-    "mongoose": "^5.13.7",
-    "multer-s3": "^2.0.1",
-    "node-schedule": "^2.0.0",
-    "socket.io": "^4.6.1",
-    "swagger-ui-express": "^4.6.1",
-    "telegraf": "^4.12.2",
+    "express": "^4.19.2",
+    "moment": "^2.30.1",
+    "mongodb": "^6.6.2",
+    "mongoose": "^8.4.0",
+    "multer-s3": "^3.0.1",
+    "node-fetch": "^2.6.1",
+    "node-schedule": "^2.1.1",
+    "socket.io": "^4.7.5",
+    "swagger-ui-express": "^5.0.0",
+    "telegraf": "^4.16.3",
     "telegraf-inline-menu": "^6.3.0",
     "telegraf-session-mongodb": "^2.0.2"
   },
   "devDependencies": {
     "btoa": "^1.2.1",
-    "dotenv": "^10.0.0",
-    "ejs": "^3.1.6",
-    "file-type": "^16.5.3",
+    "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
+    "file-type": "^19.0.0",
     "html-pdf": "^3.0.1",
     "multer": "^1.4.3",
-    "nodemon": "^2.0.12"
+    "nodemon": "^3.1.1"
   }
 }
