trying s3 to work

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start:dev": "nodemon index.js"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.587.0",
     "@telegraf/session": "^2.0.0-beta.7",
     "archiver": "^7.0.1",
     "aws-sdk": "^2.1628.0",
@@ -15,7 +16,7 @@
     "moment": "^2.30.1",
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
-    "multer-s3": "^2.10.0",
+    "multer-s3": "^3.0.1",
     "node-fetch": "^2.6.1",
     "node-schedule": "^2.1.1",
     "socket.io": "^4.7.5",
